fix(desktop): modals above menu with z-index 1 for menus when modal open

--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -18,6 +18,16 @@ body::-webkit-scrollbar {
 }
 
 body.modal-open {
+  @media (min-width: 769px) {
+    .top-menu,
+    .toolbar,
+    .setting-bar {
+      z-index: 1 !important;
+    }
+  }
+}
+
+body.modal-open {
   .top-menu,
   .toolbar,
   .setting-bar {
